adjust version to 0.5.0 that provides the basic functions to create new policies, switch among different policies, revert to simple configurator